<!--
  Copyright (C) 2015 Teddy Rodriguez (TROD)
    email: cia.123trod@gmail.com
    github: TROD-123

  For Udacity's Android Developer Nanodegree
  P1-2: Popular Movies

  Currently for educational purposes only.
-->

<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Activity names -->
    <string name="app_name">Movies</string>
    <string name="title_settings">Preferences</string>
    <string name="title_activity_detail"> </string>
    <string name="title_discover">Discover</string>
    <string name="title_playing">Now playing</string>
    <string name="title_popular">Popular</string>
    <string name="title_top_rated">Top rated</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_favorites">Favorites</string>

    <!-- App Bar buttons -->
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Preferences</string>
    <string name="action_discover">Discover</string>
    <string name="action_sort_playing">Now playing</string>
    <string name="action_sort_popular">Popular</string>
    <string name="action_sort_rated">Top rated</string>
    <string name="action_sort_upcoming">Upcoming</string>
    <string name="action_display_favorites">Favorites</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_share">Share</string>
    <string name="action_launch_tmdb_page">Launch movie page</string>

    <!-- Content provider authority -->
    <string name="content_authority">com.thirdarm.popularmovies</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <string name="sync_account_type">popularmovies.thirdarm.com</string>

    <!-- Progress statuses -->
    <string name="status_no_internet">There is no internet connection. Did not go through sync.</string>

    <!-- Movie details -->
    <string name="detail_overview">Overview</string>
    <string name="detail_credits">Cast and credits</string>
    <string name="detail_actors">Actors</string>
    <string name="detail_directors">Directors</string>
    <string name="detail_writers">Writers</string>
    <string name="detail_backdrops">Backdrops</string>
    <string name="detail_trailers">Trailers</string>
    <string name="detail_reviews">Reviews</string>
    <string name="detail_reviews_tense">Review</string>
    <string name="detail_ratings">"Rating: "</string>
    <string name="detail_votes_tense">Vote</string>
    <string name="detail_release_date">Release</string>
    <string name="detail_release_info">Release info</string>
    <string name="detail_genres">Genres:</string>

    <!-- Loading error messages -->
    <string name="error_info_null">Info not available.</string>
    <string name="error_no_internet">Info can\'t be found.</string>
    <string name="error_no_backdrops">No backdrops found.</string>
    <string name="error_no_trailers">No trailers found.</string>
    <string name="error_no_reviews">No reviews found.</string>

    <!-- Empty state strings -->
    <string name="greeting_movies">Welcome to Movies!</string>
    <string name="empty_details_movie">Click on a movie to view detailed information.</string>
    <string name="greeting_favorites">Favorites</string>
    <string name="empty_favorites">Once you favorite a movie, you\'ll see it listed here.</string>
    <string name="greeting_empty">Empty database</string>
    <string name="empty_grid">Oops! There are currently no movies loaded from the online database.
    You may have no internet connection or you may need to refresh.</string>

    <!-- Footers: copyright, credits, version -->
    <string name="footer_tmdb_prefix">"All info and images from "</string>
    <string name="footer_tmdb">The Movie Database</string>


    <!-- Strings for formatting movie detail data -->

    <!-- Poster rating -->
    <string name="format_poster_rating">
        " "<xliff:g id="rating">%1$s</xliff:g> (<xliff:g id="vote_count">%2$s</xliff:g>)
    </string>

    <!-- Tagline -->
    <string name="format_detail_tagline">
        <xliff:g id="tagline">\u0022%1$s\u0022</xliff:g>
    </string>

    <!-- Rating, for glance info -->
    <string name="format_detail_rating">
        (<xliff:g id="vote_count">%1$s</xliff:g>)
    </string>

    <!-- Release and duration -->
    <string name="format_detail_release">
        <xliff:g id="release_date">%1$s</xliff:g>
    </string>

    <string name="format_detail_release_runtime">
        <xliff:g id="release_date">%1$s</xliff:g> | <xliff:g id="runtime">%2$s</xliff:g> min
    </string>

    <string name="format_detail_release_runtime_mpaa">
        <xliff:g id="release_date">%1$s</xliff:g> | <xliff:g id="runtime">%2$s</xliff:g> min |
        <xliff:g id="mpaa_raing">%3$s</xliff:g>
    </string>

    <string name="format_detail_release_mpaa">
        <xliff:g id="release_date">%1$s</xliff:g> | <xliff:g id="mpaa_raing">%2$s</xliff:g>
    </string>

    <!-- Actors -->
    <string name="format_detail_actors">
        <xliff:g id="actor_name">%1$s</xliff:g> (<xliff:g id="character_name">%2$s</xliff:g>)
    </string>

    <!-- Directors -->
    <string name="format_detail_directors">
        <xliff:g id="director_name">%1$s</xliff:g> (<xliff:g id="director_department">%2$s</xliff:g>)
    </string>

    <!-- Writers -->
    <string name="format_detail_writers">
        <xliff:g id="writer_name">%1$s</xliff:g> (<xliff:g id="writer_department">%2$s</xliff:g>)
    </string>

    <!-- Genres -->
    <string name="format_detail_genres">
        <xliff:g id="genre">%1$s</xliff:g>
    </string>

    <!-- Footer -->
    <string name="format_detail_footer">
        <xliff:g id="tmdb_url">\u003ca href\u003d\u0027%1$s\u0027\u003e</xliff:g>
        The Movie Database<xliff:g id="url_end">\u003c\u002fa\u003e</xliff:g>
    </string>

    <!-- Rating, for reviews -->
    <string name="format_detail_reviews_rating">
        <xliff:g id="vote_count">%1$s</xliff:g> <xliff:g id="votes_tense">%2$s</xliff:g>
    </string>

    <!-- Reviews -->
    <string name="format_detail_reviews">
        <xliff:g id="reviews_count">%1$s</xliff:g> <xliff:g id="reviews_tense">%2$s</xliff:g>
    </string>

    <!-- Adding/Removing movie from favorites -->
    <string name="format_modify_favorites">
        <xliff:g id="add_remove">%1$s</xliff:g> <xliff:g id="title_movie">%2$s</xliff:g>
        <xliff:g id="to_from">%3$s</xliff:g> favorites.
    </string>

    <!-- Sharing messages -->
    <string name="format_share_movie_no_trailer">
        Hey, check out <xliff:g id="movie_title">%1$s</xliff:g>:
        <xliff:g id="tmdb_url">%2$s</xliff:g>. Movie homepage:
        <xliff:g id="homepage_url">%3$s</xliff:g>
    </string>

    <string name="format_share_movie_with_trailer">
        Hey, check out <xliff:g id="movie_title">%1$s</xliff:g>:
        <xliff:g id="trailer_url">%2$s</xliff:g>
    </string>

    <string name="format_share_review">
        Review for <xliff:g id="movie_title">%1$s</xliff:g> by
        <xliff:g id="movie_review_author">%2$s</xliff:g>:
        <xliff:g id="movie_review_url">%3$s</xliff:g> (from The Movie Database).
    </string>

    <string name="format_share_trailer">
        Trailer for <xliff:g id="movie_title">%1$s</xliff:g>:
        <xliff:g id="movie_review_url">%2$s</xliff:g>
    </string>

</resources>
