<!--
  ~  Copyright (C) 2015 Teddy Rodriguez (TROD)
  ~    email: cia.123trod@gmail.com
  ~    github: TROD-123
  ~
  ~  For Udacity's Android Developer Nanodegree
  ~  P1-2: Popular Movies
  ~
  ~  Currently for educational purposes only.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity$MoviePostersFragment"
    android:background="@color/black">

    <!-- Progress spinner and Progress bar, to display while loading data from server -->
    <RelativeLayout
        android:id="@+id/container_detail_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/activity_padding_margin" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"/>

            <!-- Spinning wheel -->
            <ProgressBar
                android:id="@+id/progress_spinner_detail"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                style="@style/Widget.AppCompat.ProgressBar" />

            <com.thirdarm.popularmovies.utilities.AutoResizeTextView
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:textColor="@color/white"
                android:maxLines="2"
                android:textSize="@dimen/abc_text_size_small_material"
                android:gravity="top|center" />

        </LinearLayout>

        <!-- Horizontal bar -->
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:max="1000"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal" />

    </RelativeLayout>

    <!-- Grid of posters -->
    <!-- TODO: Needs a column size for # of columns to actually take effect. If not, default is 2 -->
    <GridView
        android:id="@+id/posters_grid"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:stretchMode="columnWidth"
        android:padding="@dimen/grid_padding_margin"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideInset"
        android:numColumns="5"
        android:gravity="center"
        android:horizontalSpacing="@dimen/grid_padding_margin"
        android:verticalSpacing="@dimen/grid_padding_margin"
        style="@style/SelectListItem"
        android:drawSelectorOnTop="true"/>

    <!-- Empty favorites container -->
    <RelativeLayout
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerVertical="true" android:layout_centerHorizontal="true"
        android:padding="@dimen/activity_padding_margin"
        android:id="@+id/container_empty_favorites"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/imageview_empty_favorites"
            android:src="@drawable/ic_favorite_white_48dp"
            android:tint="@color/grey_300"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/greeting_favorites"
            android:textColor="@color/white"
            android:id="@+id/textview_empty_favorites"
            android:textSize="@dimen/abc_text_size_headline_material"
            android:layout_below="@+id/imageview_empty_favorites"
            android:layout_centerHorizontal="true"
            android:paddingBottom="@dimen/detail_content_divider_margin"/>

        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/empty_favorites"
            android:textColor="@color/white"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:gravity="center"
            android:layout_below="@+id/textview_empty_favorites"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <!-- Empty general movies container -->
    <RelativeLayout
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerVertical="true" android:layout_centerHorizontal="true"
        android:padding="@dimen/activity_padding_margin"
        android:id="@+id/container_empty_movies"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/imageview_empty_movies"
            android:src="@drawable/ic_warning_white_48dp"
            android:tint="@color/grey_300"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/greeting_empty"
            android:textColor="@color/white"
            android:id="@+id/textview_empty_movies"
            android:textSize="@dimen/abc_text_size_large_material"
            android:layout_below="@+id/imageview_empty_movies"
            android:layout_centerHorizontal="true"
            android:paddingBottom="@dimen/detail_content_divider_margin"/>

        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/empty_grid"
            android:textColor="@color/white"
            android:textSize="@dimen/abc_text_size_small_material"
            android:gravity="center"
            android:layout_below="@+id/textview_empty_movies"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</RelativeLayout>